tests/samples/valid/unused_forward_declaration.pn
fn some_function_UcyJFUavqGZ125995();

fn main() -> i32
{
	return: 200
}
