tests/samples/invalid/bitshift_type_mismatch.pn
fn main() -> i32
{
	var c = 0;
	var mask = 1i32 << 47u64;
	return: 200
}
